	PR driver/11810 	* gcc.c (SWITCHES_NEED_SPACES): Define to "o". 	* config/alpha/osf.h (SWITCHES_NEED_SPACES): Remove here. 	* config/mips/iris.h (SWITCHES_NEED_SPACES): Remove here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153900 138bc75d-0d04-0410-961f-82ee72b054a4